--- a/carjang/src/main/webapp/css/style.css
+++ b/carjang/src/main/webapp/css/style.css
@@ -703,6 +703,7 @@ html, body {
    /* background-color: aqua; */
 }
 
+
 /* 카장 검색 결과*/
 .searchContainer{ 
    width: 100%;
@@ -902,3 +903,14 @@ html, body {
 #detail{
 	height: auto;
 }
+.star_rating {font-size:0; letter-spacing:-4px;}
+.star_rating a {
+    font-size:22px;
+    letter-spacing:0;
+    display:inline-block;
+    margin-left:5px;
+    color:#ccc;
+    text-decoration:none;
+}
+.star_rating a:first-child {margin-left:0;}
+.star_rating a.on {color:#777;}
